{
  "version": 4,
  "terraform_version": "1.2.8",
  "serial": 189,
  "lineage": "4d6fdff6-6e5a-5d76-055a-32a95fe2b24a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_rec",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0418a3066f9fe5fd0",
            "association_id": "eipassoc-07dc7ddd2c73ee740",
            "domain": "vpc",
            "id": "eipalloc-0418a3066f9fe5fd0",
            "instance": "i-0cf209002fa4f4be7",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d4418f227393edd8",
            "private_dns": "ip-10-16-0-7.ec2.internal",
            "private_ip": "10.16.0.7",
            "public_dns": "ec2-44-218-75-232.compute-1.amazonaws.com",
            "public_ip": "44.218.75.232",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.bas1",
            "aws_security_group.sg_bas",
            "aws_subnet.public1",
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fc682b2a42e57ca2",
            "arn": "arn:aws:ec2:us-east-1:701317081716:instance/i-09f8f6c2265dbdf70",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdf",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "E Volume for app1"
                },
                "throughput": 0,
                "volume_id": "vol-0032d661ec7508e41",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09f8f6c2265dbdf70",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-013d3ce412a049c16",
            "private_dns": "ip-10-16-0-81.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.16.0.81",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ce21bba771ade0b1",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dd1f93d85e0ea3b4",
            "tags": {
              "Name": "APP-1"
            },
            "tags_all": {
              "Name": "APP-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e3d8b153c3873568"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_app",
            "aws_subnet.private1",
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fc682b2a42e57ca2",
            "arn": "arn:aws:ec2:us-east-1:701317081716:instance/i-05e4588f94b869f82",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdf",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "E Volume for app2"
                },
                "throughput": 0,
                "volume_id": "vol-03242ba0ad06c387b",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05e4588f94b869f82",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ee057ba0d675c863",
            "private_dns": "ip-10-16-0-142.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.16.0.142",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-017efcb907dcc99b2",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a41b623b708f96ca",
            "tags": {
              "Name": "APP-2"
            },
            "tags_all": {
              "Name": "APP-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e3d8b153c3873568"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_app",
            "aws_subnet.private2",
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bas1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fc682b2a42e57ca2",
            "arn": "arn:aws:ec2:us-east-1:701317081716:instance/i-0cf209002fa4f4be7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cf209002fa4f4be7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d4418f227393edd8",
            "private_dns": "ip-10-16-0-7.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.16.0.7",
            "public_ip": "44.218.75.232",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03a1148ac1230996a",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c2892cebaa7d6f26",
            "tags": {
              "Name": "Baston-1"
            },
            "tags_all": {
              "Name": "Baston-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0dc35c7498a666bec"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_bas",
            "aws_subnet.public1",
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sql1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fc682b2a42e57ca2",
            "arn": "arn:aws:ec2:us-east-1:701317081716:instance/i-035e92984e6b505ad",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdf",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "E Volume for sql1"
                },
                "throughput": 0,
                "volume_id": "vol-09866abde631f64c9",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-035e92984e6b505ad",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ec3b21c50309eae2",
            "private_dns": "ip-10-16-0-90.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.16.0.90",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06cce6297f64652f8",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dd1f93d85e0ea3b4",
            "tags": {
              "Name": "SQL-1"
            },
            "tags_all": {
              "Name": "SQL-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-073d050fc00dc4f24"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_sql",
            "aws_subnet.private1",
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sql2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fc682b2a42e57ca2",
            "arn": "arn:aws:ec2:us-east-1:701317081716:instance/i-0cf33ab7e2d098e18",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdf",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "E Volume for sql2"
                },
                "throughput": 0,
                "volume_id": "vol-014b27ddbf54607b3",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cf33ab7e2d098e18",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02b34e0850ceadc37",
            "private_dns": "ip-10-16-0-155.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.16.0.155",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-075c4f8d2240a16c1",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a41b623b708f96ca",
            "tags": {
              "Name": "SQL-2"
            },
            "tags_all": {
              "Name": "SQL-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-073d050fc00dc4f24"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_sql",
            "aws_subnet.private2",
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:701317081716:internet-gateway/igw-03a77e9be248a3e92",
            "id": "igw-03a77e9be248a3e92",
            "owner_id": "701317081716",
            "vpc_id": "vpc-0189ea4376a5e1301"
          },
          "dependencies": [
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb_external",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:701317081716:loadbalancer/app/alb-external/6a840018f0c9f31a",
            "arn_suffix": "app/alb-external/6a840018f0c9f31a",
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-external-773197839.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:701317081716:loadbalancer/app/alb-external/6a840018f0c9f31a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-external",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0c54febe434e80721"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02499b622a79117df"
              },
              {
                "subnet_id": "subnet-0c2892cebaa7d6f26"
              }
            ],
            "subnets": [
              "subnet-02499b622a79117df",
              "subnet-0c2892cebaa7d6f26"
            ],
            "tags": {
              "Name": "Application Load balancer"
            },
            "tags_all": {
              "Name": "Application Load balancer"
            },
            "vpc_id": "vpc-0189ea4376a5e1301",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.sg_alb-app",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ls_external",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:701317081716:listener/app/alb-external/6a840018f0c9f31a/f2584fa85c992814",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:701317081716:targetgroup/tg-external/9a6dc41c4876ab50",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:701317081716:listener/app/alb-external/6a840018f0c9f31a/f2584fa85c992814",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:701317081716:loadbalancer/app/alb-external/6a840018f0c9f31a",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb_external",
            "aws_lb_target_group.tg-external",
            "aws_security_group.sg_alb-app",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg-external",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:701317081716:targetgroup/tg-external/9a6dc41c4876ab50",
            "arn_suffix": "targetgroup/tg-external/9a6dc41c4876ab50",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/index.htm",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:701317081716:targetgroup/tg-external/9a6dc41c4876ab50",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-external",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "Target Group external"
            },
            "tags_all": {
              "Name": "Target Group external"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0189ea4376a5e1301"
          },
          "dependencies": [
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "app1_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:701317081716:targetgroup/tg-external/9a6dc41c4876ab50-2023080410152448050000000d",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:701317081716:targetgroup/tg-external/9a6dc41c4876ab50",
            "target_id": "i-09f8f6c2265dbdf70"
          },
          "dependencies": [
            "aws_instance.app1",
            "aws_lb_target_group.tg-external",
            "aws_security_group.sg_app",
            "aws_subnet.private1",
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "app2_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:701317081716:targetgroup/tg-external/9a6dc41c4876ab50-2023080410154511680000000e",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:701317081716:targetgroup/tg-external/9a6dc41c4876ab50",
            "target_id": "i-05e4588f94b869f82"
          },
          "dependencies": [
            "aws_instance.app2",
            "aws_lb_target_group.tg-external",
            "aws_security_group.sg_app",
            "aws_subnet.private2",
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_alb-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:701317081716:security-group/sg-0c54febe434e80721",
            "description": "sg_alb-app",
            "egress": [
              {
                "cidr_blocks": [
                  "10.16.0.0/24"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0c54febe434e80721",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.16.0.0/24"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_alb-app",
            "name_prefix": "",
            "owner_id": "701317081716",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_alb-app"
            },
            "tags_all": {
              "Name": "sg_alb-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0189ea4376a5e1301"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:701317081716:security-group/sg-0e3d8b153c3873568",
            "description": "Security group for App server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e3d8b153c3873568",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.16.0.0/24"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "10.16.0.0/24"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_app20230804101444481400000007",
            "name_prefix": "sg_app",
            "owner_id": "701317081716",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_app"
            },
            "tags_all": {
              "Name": "sg_app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0189ea4376a5e1301"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_bas",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:701317081716:security-group/sg-0dc35c7498a666bec",
            "description": "Security group for baston server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dc35c7498a666bec",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "10.16.0.0/24"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "sg_bas20230804101443368200000006",
            "name_prefix": "sg_bas",
            "owner_id": "701317081716",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_bas"
            },
            "tags_all": {
              "Name": "sg_bas"
            },
            "timeouts": null,
            "vpc_id": "vpc-0189ea4376a5e1301"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_sql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:701317081716:security-group/sg-073d050fc00dc4f24",
            "description": "Security group for App server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-073d050fc00dc4f24",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.16.0.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.16.0.0/24"
                ],
                "description": "",
                "from_port": 1433,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1433
              },
              {
                "cidr_blocks": [
                  "10.16.0.0/24"
                ],
                "description": "",
                "from_port": 3343,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3343
              }
            ],
            "name": "sg_sql20230804101442216200000005",
            "name_prefix": "sg_sql",
            "owner_id": "701317081716",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_sql"
            },
            "tags_all": {
              "Name": "sg_sql"
            },
            "timeouts": null,
            "vpc_id": "vpc-0189ea4376a5e1301"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:701317081716:subnet/subnet-0dd1f93d85e0ea3b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.16.0.64/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd1f93d85e0ea3b4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "701317081716",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private1"
            },
            "tags_all": {
              "Name": "private1"
            },
            "vpc_id": "vpc-0189ea4376a5e1301"
          },
          "dependencies": [
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:701317081716:subnet/subnet-0a41b623b708f96ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.16.0.128/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a41b623b708f96ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "701317081716",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private1"
            },
            "tags_all": {
              "Name": "private1"
            },
            "vpc_id": "vpc-0189ea4376a5e1301"
          },
          "dependencies": [
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:701317081716:subnet/subnet-0c2892cebaa7d6f26",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.16.0.0/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c2892cebaa7d6f26",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "701317081716",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public1"
            },
            "tags_all": {
              "Name": "public1"
            },
            "vpc_id": "vpc-0189ea4376a5e1301"
          },
          "dependencies": [
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:701317081716:subnet/subnet-02499b622a79117df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.16.0.32/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02499b622a79117df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "701317081716",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public1"
            },
            "tags_all": {
              "Name": "public1"
            },
            "vpc_id": "vpc-0189ea4376a5e1301"
          },
          "dependencies": [
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "three-tier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:701317081716:vpc/vpc-0189ea4376a5e1301",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.16.0.0/24",
            "default_network_acl_id": "acl-072e26606ecf10ba6",
            "default_route_table_id": "rtb-096040785a4eff13f",
            "default_security_group_id": "sg-0842d9953b51d2221",
            "dhcp_options_id": "dopt-0f29bd2c29eb79907",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0189ea4376a5e1301",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-096040785a4eff13f",
            "owner_id": "701317081716",
            "tags": {
              "Name": "3-tier app VPC"
            },
            "tags_all": {
              "Name": "3-tier app VPC"
            }
          }
        }
      ]
    }
  ]
}